Update Layout in PrimeActivity
PrimeActivity 의 레이아웃 수정

PrimeActivity :
    - 프래그먼트 3개에서 1개만 관리
    - 어댑터는 프래그먼트로 이동
    - PagerNestedScrollView, CustomViewPager, historyRecyclerView 이동
    - setPrimeTotal 메서드 제거
    - PrimeAdapter 이동

PrimeFragment :
    - 히스토리 어댑터 추가
    - PagerNestedScrollView, CustomViewPager, historyRecyclerView 이동해옴
    - PagerNestedScrollView 는 기본 NestedScrollView 로 변경
    - PrimeAdapter 추가
    - CircleCounter 프래그먼트 관리

PrimeCircleFragment :
    - ViewPager 내의 CircleView 를 관리, 기능 동일

AndroidManifest.xml : 오류 수정

styles.xml
    - CircleCounter 스타일 제거

--- a/app/src/main/res/layout/a_prime.xml
+++ b/app/src/main/res/layout/a_prime.xml
@@ -58,68 +58,29 @@
                     android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:contentDescription="@string/bt.rssi"/>
-
-
             </LinearLayout>
-
-            <android.support.design.widget.TabLayout
-                android:id="@+id/prime_tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
-                app:tabGravity="center"
-                app:tabMode="fixed"/>
-
-
         </android.support.design.widget.AppBarLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="@drawable/toolbar_drop_shadow"
-            app:layout_anchor="@id/prime_tabs"
+            app:layout_anchor="@id/prime_toolbar"
             app:layout_anchorGravity="bottom|center"/>
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/prime_swipeRefreshLayout"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@null"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <com.rainbow.kam.bt_scanner.tools.view.PagerNestedScrollView
-                android:id="@+id/prime_nested"
+            <FrameLayout
+                android:id="@+id/prime_fragment_frame"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@null"
-                android:fillViewport="true"
-                android:focusable="true"
-                android:focusableInTouchMode="true">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <com.rainbow.kam.bt_scanner.tools.view.CustomViewPager
-                        android:id="@+id/prime_viewpager"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@null"
-                        />
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/history_recycler"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@null"
-                        />
-                </LinearLayout>
-            </com.rainbow.kam.bt_scanner.tools.view.PagerNestedScrollView>
+                android:layout_height="wrap_content"/>
         </android.support.v4.widget.SwipeRefreshLayout>
-
 
     </android.support.design.widget.CoordinatorLayout>
 
