--- a/app/src/main/res/layout/f_prime.xml
+++ b/app/src/main/res/layout/f_prime.xml
@@ -1,72 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@null"
-              android:orientation="vertical">
+<!--<com.rainbow.kam.bt_scanner.tools.view.PagerNestedScrollView-->
+<android.support.v4.widget.NestedScrollView
+    android:id="@+id/prime_nested"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@null"
+    android:fillViewport="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/prime_card"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="10dp"
+        android:layout_height="match_parent"
         android:background="@null"
-        android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="2dp"
-        app:cardElevation="8dp"
-        app:cardPreventCornerOverlap="false"
-        app:contentPadding="0dp">
+        android:orientation="vertical">
 
-        <RelativeLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/prime_card"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="100dp"
+            android:layout_margin="10dp"
+            android:background="@null"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="2dp"
+            app:cardElevation="8dp"
+            app:cardPreventCornerOverlap="false"
+            app:contentPadding="0dp">
 
-            <ImageView
-                android:id="@+id/prime_card_image"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:scaleType="centerCrop"
-                android:tint="#88101010"
-                />
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/prime_label"
-                android:layout_width="wrap_content"
+                <ImageView
+                    android:id="@+id/prime_card_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:scaleType="centerCrop"
+                    android:tint="#88101010"
+                    />
+
+                <TextView
+                    android:id="@+id/prime_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:background="@null"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:padding="15dp"
+                    android:textColor="@android:color/white"
+                    android:textSize="24sp"/>
+
+                <TextView
+                    android:id="@+id/prime_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="25dp"
+                    android:background="@null"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="30sp"/>
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <com.rainbow.kam.bt_scanner.tools.view.CustomViewPager
+            android:id="@+id/prime_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            />
+
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card1"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            card_view:cardBackgroundColor="#343f57"
+            card_view:cardCornerRadius="2dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
                 android:background="@null"
-                android:focusable="true"
-                android:gravity="center"
-                android:padding="15dp"
-                android:textColor="@android:color/white"
-                android:textSize="24sp"/>
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/prime_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="25dp"
-                android:background="@null"
-                android:focusable="true"
-                android:gravity="center"
-                android:textColor="@android:color/white"
-                android:textSize="30sp"/>
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/prime_tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    app:popupTheme="@style/AppTheme.PopupOverlay"
+                    app:tabGravity="center"
+                    app:tabMode="fixed"/>
 
-        </RelativeLayout>
+                <com.db.chart.view.LineChartView
+                    android:id="@+id/chart1"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@null"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
-    </android.support.v7.widget.CardView>
 
-    <com.rainbow.kam.bt_scanner.tools.view.CircleCounter
-        android:id="@+id/counter"
-        style="@style/CircleCounter">
-    </com.rainbow.kam.bt_scanner.tools.view.CircleCounter>
-
-</LinearLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/history_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            />
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
+    <!--</com.rainbow.kam.bt_scanner.tools.view.PagerNestedScrollView>-->
