--- a/app/src/main/res/layout/i_prime_history.xml
+++ b/app/src/main/res/layout/i_prime_history.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="2dp"
+    android:layout_margin="3dp"
     android:background="@null"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardCornerRadius="0dp"
-    app:cardElevation="1dp"
+    app:cardBackgroundColor="#343f57"
+    app:cardCornerRadius="2dp"
+    app:cardElevation="2dp"
     app:cardPreventCornerOverlap="false"
-    app:contentPadding="0dp">
+    app:contentPadding="2dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -32,17 +34,17 @@
             android:layout_marginRight="7dp"
             android:layout_toEndOf="@+id/history_icon"
             android:background="@null"
-            android:textColor="@color/text_dark"
-            android:textSize="20sp" />
+            android:textColor="@color/text_light"
+            android:textSize="20sp"/>
 
         <ImageView
             android:id="@+id/history_icon"
             android:layout_width="wrap_content"
-            android:layout_margin="5dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:background="@null" />
+            android:layout_margin="5dp"
+            android:background="@null"/>
 
         <TextView
             android:id="@+id/history_date"
@@ -52,7 +54,7 @@
             android:layout_centerVertical="true"
             android:layout_margin="7dp"
             android:background="@null"
-            android:textColor="@color/text_dark"
-            android:textSize="20sp" />
+            android:textColor="@color/text_light"
+            android:textSize="20sp"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
