--- a/app/src/main/res/layout/f_prime.xml
+++ b/app/src/main/res/layout/f_prime.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<!--<com.rainbow.kam.bt_scanner.tools.view.PagerNestedScrollView-->
 <android.support.v4.widget.NestedScrollView
     android:id="@+id/prime_nested"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -23,7 +20,7 @@
             android:id="@+id/prime_card"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_margin="10dp"
+            android:layout_margin="3dp"
             android:background="@null"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
@@ -84,7 +81,7 @@
 
 
         <android.support.v7.widget.CardView
-            android:id="@+id/card1"
+            android:id="@+id/prime_tab_graph"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -126,4 +123,3 @@
             />
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
-    <!--</com.rainbow.kam.bt_scanner.tools.view.PagerNestedScrollView>-->
