Update View Layout in Prime Package
Prime 앱의 뷰 속성 수정

a_prime.xml :
    - shadow 제거

f_prime.xml :
    - 업데이트 텍스트뷰 추가
    - 텍스트 컬러 수정
    - 차트카드 속성 수정
    - TabLayout tabIndicatorColor / tabSelectedTextColor / tabTextColor 추가

i_prime_history.xml :
    - 카드 속성 수정

colors.xml
dimens.xml

--- a/app/src/main/res/layout/i_bluetooth_device.xml
+++ b/app/src/main/res/layout/i_bluetooth_device.xml
@@ -3,6 +3,7 @@
     android:id="@+id/device_item_card"
     style="@style/DeviceItemCard"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@null"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground">
 
@@ -88,7 +89,8 @@
     <ImageView
         android:id="@+id/item_expend"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="end|top"
         android:layout_margin="7dp"
-        android:layout_height="wrap_content"/>
+        android:background="@null"/>
 </android.support.v7.widget.CardView>
