--- a/app/src/main/res/layout/f_prime.xml
+++ b/app/src/main/res/layout/f_prime.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:background="@null"
     android:fillViewport="true"
+    android:fitsSystemWindows="true"
     android:focusable="true"
     android:focusableInTouchMode="true">
 
@@ -31,13 +32,15 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@null">
 
                 <ImageView
                     android:id="@+id/prime_card_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerInParent="true"
+                    android:background="@null"
                     android:scaleType="centerCrop"
                     android:tint="#88101010"
                     />
@@ -52,7 +55,7 @@
                     android:focusable="true"
                     android:gravity="center"
                     android:padding="15dp"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/text_light"
                     android:textSize="24sp"/>
 
                 <TextView
@@ -65,7 +68,7 @@
                     android:background="@null"
                     android:focusable="true"
                     android:gravity="center"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/text_light"
                     android:textSize="30sp"/>
 
             </RelativeLayout>
@@ -82,12 +85,15 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/prime_tab_graph"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            card_view:cardBackgroundColor="#343f57"
-            card_view:cardCornerRadius="2dp">
+            android:layout_margin="0dp"
+            android:background="@null"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="#343f57"
+            app:cardCornerRadius="0dp">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -103,7 +109,10 @@
                     app:layout_scrollFlags="scroll|enterAlways"
                     app:popupTheme="@style/AppTheme.PopupOverlay"
                     app:tabGravity="center"
-                    app:tabMode="fixed"/>
+                    app:tabIndicatorColor="@color/chart_dots"
+                    app:tabMode="fixed"
+                    app:tabSelectedTextColor="@color/chart_dots"
+                    app:tabTextColor="@color/text_light"/>
 
                 <com.db.chart.view.LineChartView
                     android:id="@+id/chart1"
@@ -111,9 +120,21 @@
                     android:layout_height="170dp"
                     android:layout_margin="20dp"
                     android:background="@null"/>
+
+                <TextView
+                    android:id="@+id/prime_update"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|right"
+                    android:layout_margin="3dp"
+                    android:background="@null"
+                    android:text="대기중..."
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@color/text_light"/>
+
+
             </LinearLayout>
         </android.support.v7.widget.CardView>
-
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/history_recycler"
