--- a/app/src/main/res/layout/f_prime.xml
+++ b/app/src/main/res/layout/f_prime.xml
@@ -4,10 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@null"
-    android:fillViewport="true"
-    android:fitsSystemWindows="true"
     android:focusable="true"
     android:focusableInTouchMode="true">
 
@@ -75,72 +73,77 @@
 
         </android.support.v7.widget.CardView>
 
-        <com.rainbow.kam.bt_scanner.tools.view.CustomViewPager
+        <android.support.v4.view.ViewPager
             android:id="@+id/prime_viewpager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            />
+            android:layout_height="@dimen/circle_counter_size"
+            android:layout_gravity="center_horizontal"
+            android:background="@null"/>
 
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/prime_tab_graph"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="0dp"
-            android:background="@null"
-            android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardBackgroundColor="#343f57"
-            app:cardCornerRadius="0dp">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:orientation="vertical">
-
-                <android.support.design.widget.TabLayout
-                    android:id="@+id/prime_tabs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    app:layout_scrollFlags="scroll|enterAlways"
-                    app:popupTheme="@style/AppTheme.PopupOverlay"
-                    app:tabGravity="center"
-                    app:tabIndicatorColor="@color/chart_dots"
-                    app:tabMode="fixed"
-                    app:tabSelectedTextColor="@color/chart_dots"
-                    app:tabTextColor="@color/text_light"/>
-
-                <com.db.chart.view.LineChartView
-                    android:id="@+id/chart1"
-                    android:layout_width="match_parent"
-                    android:layout_height="170dp"
-                    android:layout_margin="20dp"
-                    android:background="@null"/>
-
-                <TextView
-                    android:id="@+id/prime_update"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|right"
-                    android:layout_margin="3dp"
-                    android:background="@null"
-                    android:text="대기중..."
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/text_light"/>
-
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/history_recycler"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@null"
-            />
+            android:orientation="vertical">
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/prime_tab_graph"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="0dp"
+                android:background="@null"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardBackgroundColor="#343f57"
+                app:cardCornerRadius="0dp">
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <android.support.design.widget.TabLayout
+                        android:id="@+id/prime_tabs"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        app:layout_scrollFlags="scroll|enterAlways"
+                        app:popupTheme="@style/AppTheme.PopupOverlay"
+                        app:tabGravity="center"
+                        app:tabIndicatorColor="@color/chart_dots"
+                        app:tabMode="fixed"
+                        app:tabSelectedTextColor="@color/chart_dots"
+                        app:tabTextColor="@color/text_light"/>
+
+                    <com.db.chart.view.LineChartView
+                        android:id="@+id/chart1"
+                        android:layout_width="match_parent"
+                        android:layout_height="170dp"
+                        android:layout_margin="20dp"
+                        android:background="@null"/>
+
+
+                    <TextView
+                        android:id="@+id/prime_update"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|end"
+                        android:layout_margin="3dp"
+                        android:background="@null"
+                        android:text="@string/prime_chart_update_wait"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="@color/text_light"/>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/history_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:background="@null"
+                />
+        </LinearLayout>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
