--- a/app/src/main/res/layout/f_prime_circle.xml
+++ b/app/src/main/res/layout/f_prime_circle.xml
@@ -12,7 +12,7 @@
         android:layout_width="@dimen/circle_counter_size"
         android:layout_height="@dimen/circle_counter_size"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="@dimen/circle_counter_margin"
+        android:padding="@dimen/circle_counter_margin"
         android:background="@null"
         app:metricSize="20sp"
         app:range="60"
