--- a/app/src/main/res/layout/a_prime.xml
+++ b/app/src/main/res/layout/a_prime.xml
@@ -57,7 +57,8 @@
                     android:layout_gravity="center_vertical"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:contentDescription="@string/bt.rssi"/>
+                    android:contentDescription="@string/bt.rssi"
+                    android:src="@drawable/ic_bluetooth_white_24dp"/>
             </LinearLayout>
         </android.support.design.widget.AppBarLayout>
 
@@ -67,6 +68,7 @@
             android:layout_height="wrap_content"
             android:background="@null"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
 
             <FrameLayout
                 android:id="@+id/prime_fragment_frame"
