--- a/app/src/main/res/layout/f_prime.xml
+++ b/app/src/main/res/layout/f_prime.xml
@@ -18,14 +18,13 @@
         <android.support.v7.widget.CardView
             android:id="@+id/prime_card"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="3dp"
+            android:layout_height="wrap_content"
             android:background="@null"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="2dp"
-            app:cardElevation="8dp"
-            app:cardPreventCornerOverlap="false"
+            app:cardCornerRadius="1dp"
+            app:cardElevation="0dp"
+            app:cardMaxElevation="0dp"
             app:contentPadding="0dp">
 
             <RelativeLayout
@@ -76,9 +75,10 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/prime_viewpager"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/circle_counter_size"
-            android:layout_gravity="center_horizontal"
-            android:background="@null"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:background="@null"
+            android:gravity="center"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -87,7 +87,7 @@
             android:orientation="vertical">
 
             <android.support.v7.widget.CardView
-                android:id="@+id/prime_tab_graph"
+                android:id="@+id/prime_tab_chart"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="0dp"
@@ -95,7 +95,9 @@
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 app:cardBackgroundColor="#343f57"
-                app:cardCornerRadius="0dp">
+                app:cardCornerRadius="1dp"
+                app:cardElevation="0dp"
+                app:cardMaxElevation="0dp">
 
 
                 <LinearLayout
@@ -118,9 +120,9 @@
                         app:tabTextColor="@color/text_light"/>
 
                     <com.db.chart.view.LineChartView
-                        android:id="@+id/chart1"
+                        android:id="@+id/prime_chart"
                         android:layout_width="match_parent"
-                        android:layout_height="170dp"
+                        android:layout_height="wrap_content"
                         android:layout_margin="20dp"
                         android:background="@null"/>
 
@@ -141,7 +143,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/history_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
+                android:layout_height="match_parent"
                 android:background="@null"
                 />
         </LinearLayout>
