--- a/app/src/main/res/layout/f_prime_circle.xml
+++ b/app/src/main/res/layout/f_prime_circle.xml
@@ -2,8 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@null"
     android:orientation="vertical">
 
@@ -11,9 +11,9 @@
         android:id="@+id/counter"
         android:layout_width="@dimen/circle_counter_size"
         android:layout_height="@dimen/circle_counter_size"
-        android:layout_gravity="center_horizontal"
-        android:padding="@dimen/circle_counter_margin"
+        android:layout_gravity="center_horizontal|center_vertical"
         android:background="@null"
+        android:padding="@dimen/circle_counter_margin"
         app:metricSize="20sp"
         app:range="60"
         app:textColor="@null"
