--- a/app/src/main/res/layout/f_prime.xml
+++ b/app/src/main/res/layout/f_prime.xml
@@ -18,13 +18,11 @@
         <android.support.v7.widget.CardView
             android:id="@+id/prime_card"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@null"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
             app:cardCornerRadius="1dp"
-            app:cardElevation="0dp"
-            app:cardMaxElevation="0dp"
             app:contentPadding="0dp">
 
             <RelativeLayout
@@ -75,8 +73,8 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/prime_viewpager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_height="@dimen/circle_counter_size"
+            android:layout_gravity="center_horizontal"
             android:background="@null"
             android:gravity="center"/>
 
