Add Device Battery TextView in PrimeActivity
PrimeActivity :
    - navUpdate, navBattery 생성
    - setNavInfoView 를 onCreate 에서 호출
    - setNavInfoView 에서 nav 의 View 를 inflate 하여 초기화
    - setUpdateValue - 업데이트 시간 적용
    - setBatteryValue - 기기 배터리 용량 값 적용
    - onDataNotify 의 UI 쓰레드 접근 코드 수정

PrimeFragment :
    - setUpdateValue 메서드 제거

a_prime.xml :  Navigation Bar 의 헤더 수정

v_nav_header_prime.xml : 생성, 업데이트 텍스트뷰, 기기 배터리 텍스트뷰 추가

f_prime.xml : 업데이트 텍스트뷰 제거

--- a/app/src/main/res/layout/a_prime.xml
+++ b/app/src/main/res/layout/a_prime.xml
@@ -85,6 +85,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/v_nav_header"
+        app:headerLayout="@layout/v_nav_header_prime"
         app:menu="@menu/menu_prime"/>
 </android.support.v4.widget.DrawerLayout>
