--- a/app/src/main/res/layout/f_prime.xml
+++ b/app/src/main/res/layout/f_prime.xml
@@ -125,7 +125,6 @@
                         android:background="@null"/>
 
 
-
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -134,6 +133,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@null"
+                android:scrollbars="vertical"
                 />
         </LinearLayout>
     </LinearLayout>
