Fix Issue #13 [네비게이션 뷰: 연결이 안된 상태에서 0% 대기중이 표시된다] Fix Issue #20 [숫자가 배터리 정보라는 의미가 전해지 않음] Fix Issue #18 [첫 화면에서 이미지에 오버레이된 문자열의 정렬 수정]
PrimeActivity / v_nav_header_prime.xml :
    - nav 의 배터리 텍스트 뷰를 이미지 뷰로 대체함
    - readBatteryValue 메서드 제거
    - setBatteryValue 에서 이미지 결정
    - onReadSuccess 의 UI 쓰레드 코드 수정
    - totalCardView 의 속성 수정

ic_battery_alert_white_36dp.png 추가
ic_battery_std_white_36dp.png 추가
ic_battery_unknown_white_36dp.png 추가

--- a/app/src/main/res/layout/v_nav_header_prime.xml
+++ b/app/src/main/res/layout/v_nav_header_prime.xml
@@ -25,12 +25,11 @@
               tools:ignore="Overdraw">
 
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="0%"
         android:id="@+id/prime_battery"
+        android:src="@drawable/ic_battery_unknown_white_36dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"/>
 
