--- a/app/src/main/res/layout/f_prime.xml
+++ b/app/src/main/res/layout/f_prime.xml
@@ -44,8 +44,8 @@
                     android:id="@+id/prime_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
                     android:background="@null"
                     android:focusable="true"
                     android:gravity="center"
@@ -64,7 +64,7 @@
                     android:focusable="true"
                     android:gravity="center"
                     android:textColor="@color/text_light"
-                    android:textSize="30sp"/>
+                    android:textSize="35sp"/>
 
             </RelativeLayout>
 
@@ -138,6 +138,7 @@
                     android:layout_gravity="center"
                     android:text="@string/prime_data_queue"
                     android:textAppearance="?android:attr/textAppearanceLarge"/>
+
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/history_recycler"
                     android:layout_width="match_parent"
