--- a/app/src/main/res/layout/f_prime.xml
+++ b/app/src/main/res/layout/f_prime.xml
@@ -127,28 +127,13 @@
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
-
-            <FrameLayout
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/history_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/prime_data_queue"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/history_recycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@null"
-                    android:scrollbars="vertical"
-                    />
-            </FrameLayout>
-
-
+                android:layout_height="match_parent"
+                android:background="#343f57"
+                android:scrollbars="vertical"
+                />
         </LinearLayout>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
