--- a/app/src/main/res/layout/i_prime_history.xml
+++ b/app/src/main/res/layout/i_prime_history.xml
@@ -5,11 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:layout_marginBottom="2dp"
+    android:layout_marginEnd="2dp"
+    android:layout_marginStart="4dp"
+    android:layout_marginTop="4dp"
     android:background="@null"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardBackgroundColor="#343f57"
-    app:cardCornerRadius="0dp"
+    app:cardBackgroundColor="#fff"
+    app:cardCornerRadius="2dp"
     app:cardPreventCornerOverlap="false"
     app:contentPadding="2dp">
 
@@ -32,7 +36,7 @@
             android:layout_marginRight="7dp"
             android:layout_toEndOf="@+id/history_icon"
             android:background="@null"
-            android:textColor="@color/text_light"
+            android:textColor="@color/text_dark"
             android:textSize="20sp"/>
 
         <ImageView
@@ -52,7 +56,7 @@
             android:layout_centerVertical="true"
             android:layout_margin="7dp"
             android:background="@null"
-            android:textColor="@color/text_light"
+            android:textColor="@color/text_dark"
             android:textSize="20sp"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
