현재 연결된 장비에 대한 정보 표시
PrimeActivity :
    - navDeviceName, navDeviceAddress 생성
    - loadUserDeviceData 에서 setDeviceValue 호출
    - setDeviceValue 생성, 기기 정보 적용

v_nav_header_prime.xml :
    - 이름, 주소 텍스트뷰를 네비게이션의 헤더에 추가

fixes #22

--- a/app/src/main/res/layout/df_device_list.xml
+++ b/app/src/main/res/layout/df_device_list.xml
@@ -25,10 +25,11 @@
     <TextView
         android:id="@+id/prime_no_device_textView"
         style="@style/NoDeviceLabel"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:layout_gravity="center"
         android:text="@string/device.list.nothing"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
+        android:textColor="@color/text_light"/>
 
 
 </RelativeLayout>
