--- a/app/src/main/res/layout/v_nav_header_prime.xml
+++ b/app/src/main/res/layout/v_nav_header_prime.xml
@@ -15,35 +15,55 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="200dp"
-              android:background="@color/colorPrimaryDark"
-              android:orientation="vertical"
-              android:padding="@dimen/nav_header_padding"
-              android:theme="@style/ThemeOverlay.AppCompat.Dark"
-              tools:ignore="Overdraw">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="@color/colorPrimaryDark"
+                android:orientation="vertical"
+                android:padding="@dimen/nav_header_padding"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark"
+                tools:ignore="Overdraw">
 
 
     <ImageView
+        android:id="@+id/prime_battery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/prime_battery"
-        android:src="@drawable/ic_battery_unknown_white_36dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:src="@drawable/ic_battery_unknown_white_36dp"/>
 
     <TextView
         android:id="@+id/prime_update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/prime_battery"
+        android:layout_alignParentEnd="true"
         android:layout_gravity="bottom|end"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
         android:background="@null"
         android:text="@string/prime_chart_update_wait"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/text_light"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp"
-        android:layout_alignBottom="@+id/prime_battery"
-        android:layout_alignParentEnd="true"/>
+        android:textColor="@color/text_light"/>
+
+    <TextView
+        android:id="@+id/prime_device_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="10dp"
+        android:text="New Text"
+        android:textSize="30sp"/>
+
+    <TextView
+        android:id="@+id/prime_device_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Large Text"
+        android:layout_marginRight="10dp"
+        android:textSize="20sp"
+        android:layout_below="@+id/prime_device_name"
+        android:layout_alignStart="@+id/prime_device_name"/>
 </RelativeLayout>
