서포트 라이브러리 업데이트 시, 각 스크롤 속성을 가진 뷰들이 리스너를 무시하는 이슈 수정
PrimeActivity :
    -  SwipeRefreshLayout.OnRefreshListener (제거) > PrimeFragment.OnRefreshListener (추가)
    - SwipeRefreshLayout / postSwipeRefresh 변수 이동 > PrimeFragment
    - setMaterialView, dismissSwipeRefresh, connectDevice, onDeviceDisconnected 수정

PrimeFragment :
    - postSwipeRefresh 추가
    - OnRefreshListener 인터페이스 생성
    - setNestedScrollView > setMaterialViews
    - setMaterialViews 수정
    - isRefreshing, setRefreshing, onRefresh 생성

others : remove lint

fix Issue #28 in milestone by v1.0

--- a/app/src/main/res/layout/a_prime.xml
+++ b/app/src/main/res/layout/a_prime.xml
@@ -62,19 +62,13 @@
             </LinearLayout>
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/prime_swipeRefreshLayout"
+
+        <FrameLayout
+            android:id="@+id/prime_fragment_frame"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@null"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-
-            <FrameLayout
-                android:id="@+id/prime_fragment_frame"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </android.support.v4.widget.SwipeRefreshLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 
