Rename RealmItem and Create ActivityHistoryItem
RealmPrimeItem > RealmUserActivityItem

ActivityHistoryItem : 생성

--- a/app/src/main/res/layout/a_prime.xml
+++ b/app/src/main/res/layout/a_prime.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
-        tools:context=".activity.realmPrimeItem.BandContentActivity">
+        tools:context=".activity.realmUserActivityItem.BandContentActivity">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/prime_appbar"
