--- a/app/src/main/res/layout/a_nursing.xml
+++ b/app/src/main/res/layout/a_nursing.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v4.widget.DrawerLayout
-    android:id="@+id/prime_drawer_layout"
+    android:id="@+id/nursing_drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,14 +11,14 @@
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/prime_coordinatorLayout"
+        android:id="@+id/nursing_coordinatorLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
         tools:context=".activity.realmUserActivityItem.BandContentActivity">
 
         <android.support.design.widget.AppBarLayout
-            android:id="@+id/prime_appbar"
+            android:id="@+id/nursing_appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
@@ -32,14 +32,14 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
                 <android.support.v7.widget.Toolbar
-                    android:id="@+id/prime_toolbar"
+                    android:id="@+id/nursing_toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:background="?attr/colorPrimary"/>
 
                 <TextView
-                    android:id="@+id/prime_toolbar_rssi"
+                    android:id="@+id/nursing_toolbar_rssi"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
@@ -51,7 +51,7 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                 <ImageView
-                    android:id="@+id/prime_toolbar_bluetoothFlag"
+                    android:id="@+id/nursing_toolbar_bluetoothFlag"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -64,7 +64,7 @@
 
 
         <FrameLayout
-            android:id="@+id/prime_fragment_frame"
+            android:id="@+id/nursing_fragment_frame"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
@@ -74,11 +74,11 @@
 
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/prime_nav_view"
+        android:id="@+id/nursing_nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/v_nav_header_prime"
-        app:menu="@menu/menu_prime"/>
+        app:headerLayout="@layout/v_nav_header_nursing"
+        app:menu="@menu/menu_nursing"/>
 </android.support.v4.widget.DrawerLayout>
