--- a/app/src/main/res/layout/df_nursing_user.xml
+++ b/app/src/main/res/layout/df_nursing_user.xml
@@ -6,14 +6,14 @@
     android:background="@null">
 
     <LinearLayout
-        android:id="@+id/prime_init_group"
+        android:id="@+id/nursing_init_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
         android:orientation="vertical">
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/prime_add_user_name"
+            android:id="@+id/nursing_add_user_name"
             style="@style/TextInputEditText.Input">
 
             <android.support.v7.widget.AppCompatEditText
@@ -23,7 +23,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/prime_add_user_age"
+            android:id="@+id/nursing_add_user_age"
             style="@style/TextInputEditText.Input">
 
             <android.support.v7.widget.AppCompatEditText
@@ -33,7 +33,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/prime_add_user_height"
+            android:id="@+id/nursing_add_user_height"
             style="@style/TextInputEditText.Input">
 
             <android.support.v7.widget.AppCompatEditText
@@ -43,7 +43,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/prime_add_user_weight"
+            android:id="@+id/nursing_add_user_weight"
             style="@style/TextInputEditText.Input">
 
             <android.support.v7.widget.AppCompatEditText
@@ -84,7 +84,7 @@
             android:gravity="center_vertical">
 
             <android.support.design.widget.FloatingActionButton
-                android:id="@+id/prime_accept_fab"
+                android:id="@+id/nursing_accept_fab"
                 style="@style/Fab"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
